syntax = "proto2";
package DB.Protos;

message LakeProperties {
  message KeyValue {
    optional string key = 1;
    optional string value = 2;
  }

  repeated KeyValue properties = 1;
}

message ProtoHiveFile
{
    optional uint32 format = 1;
    optional string file_path = 2;
    optional uint64 file_size = 3;
    optional string storage = 4;
    optional string partition_id = 5;

    /// hudi & paimon
    optional LakeProperties properties = 6;
    optional bytes input_split_bytes = 7;
}

message ProtoHiveFiles
{
    repeated ProtoHiveFile files = 1;
    optional string sd_url = 2;
}
